Fixed broken css

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -139,12 +139,12 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 }
 
 
-.fade.ng-leave {
-  transition: visibility 2s linear, opacity 2s linear;
-  opacity: 1;
-  visibility: visible;
-}
-.fade.ng-leave-active {
-  opacity: 0;
-  visibility: hidden;
-}
+// .fade.ng-leave {
+//   transition: visibility 2s linear, opacity 2s linear;
+//   opacity: 1;
+//   visibility: visible;
+// }
+// .fade.ng-leave-active {
+//   opacity: 0;
+//   visibility: hidden;
+// }
